# buglympics

./: .gitignore  Cargo.toml  build.rs  fuild.rs  pak.rs
assets/: ant_anim_hh.xcf  ant_ski.xcf  buglympics_shot_01_concept.xcf  cut_01_arrival.tmx  cut_01_arrival.tsx  cut_01_arrival_hh.xcf  cut_02_park.tmx  cut_02_park.tsx  event_select.tmx  event_select_theme.dmf  nation_select.tsx  nation_select.xcf  spyder_victory.xcf  title_screen.tmx  title_screen.tsx  title_screen_hh.xcf  winter_set.piskel
assets/1985/: ant_anim.piskel  ant_anim.xcf  ant_anim_1985.piskel  arena.tsx  arena.xcf  arena_map_01.tmx  attract_bg01.tmx  buglympics_victory.xcf  craggy_biathlon_01.tmx  craggy_biathlon_02.tmx  crosscountry_biathlon_01.tmx  cut_01_arrival.xcf  cut_02_park.xcf  downhill_biathlon_01.tmx  ground.xcf  nation_select.tmx  title_screen.xcf  winter_set.tsx  winter_set.xcf  wintersets.piskel
assets/1986/: arena_hh.xcf  spyder_shot_01_briefing.xcf  spyder_shot_03_sneak.xcf  tool_select.xcf  winter_set_hh.xcf
assets/proto/: ant.blend  ant.blend1  cube_hob_set.tsx  cube_hop.tmx
assets/proto/buglympics_frames/: ant.tsx  ant_walk0001.xcf  (+1 more)
src/: _main.rs  bin.rs  lib.rs  main.rs
src/game/: attract_mode.rs  biathlon.rs  cutscene.rs  event_select.rs  input.rs  medal_cere.rs  menu.rs  mod.rs  nation_select.rs  native.rs  player.rs  sounds.rs  state.rs  title_screen.rs  victory.rs
src/native/: mod.rs  pack.rs
src/scenes/: attract_mode.rs  biathlon.rs  event_select.rs  medal_cere.rs  mod.rs  nation_select.rs  title_screen.rs  victory.rs
web/: apu.js  index.html
