[package]
name = "buglympics"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "buglympics"
path = "src/bin.rs"

[dependencies]
console_error_panic_hook="*"
lentsys={path="../../projects/lentsys"}
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"]}
sdl2 = {version="*", optional=true}

[features]
native = ["sdl2","lentsys/io"]